# mayrabot

./: .env.example  .env.prod.example  .gitignore  Dockerfile  PROFESSIONAL_FEATURES.md  README.md  debug_api_call.py  debug_bot.sh  debug_meal_generation.py  deploy_pdf_delivery.sh  deploy_professional_final.sh  deploy_professional_v2.sh  docker-compose.prod.yml  docker-compose.yml  fix_deployment.sh  fix_imports.sh  fix_meal_display.sh  pyproject.toml  redeploy.sh  requirements.txt  run_bot.sh  run_bot_direct.sh  test_api.py  test_api.sh  test_chromadb_simple.py  test_distribution.py  test_enums.py  test_search.sh  test_simple.py  test_simple.sh
api/: __init__.py  config.py  main.py
api/models/: __init__.py  patient.py
api/routers/: health.py  motor1.py  motor2.py  motor3.py
api/services/: __init__.py  chromadb_service.py  meal_replacer.py  openai_service.py  pdf_generator.py  plan_adjuster.py  plan_generator.py  recipe_searcher.py
data/: almuerzoscena.docx  desayunos.docx  desayunosequivalentes.docx  recetas.docx
data_processor/: docx_processor.py  load_to_chromadb.py  recipe_extractor.py  test_processing.py  verify_chromadb.py  verify_chromadb_simple.py
deploy/: DEPLOYMENT_GUIDE.md  deploy.sh  setup-droplet.sh
docs/: MACRO_CUSTOMIZATION_GUIDE.md
nginx/: nginx.conf
prompts/: __init__.py  base_prompt.py  motor1_prompt.py  motor2_prompt.py  motor3_prompt.py
scripts/: docker_build.sh  docker_clean.sh  docker_down.sh  docker_logs.sh  docker_quick_fix.sh  docker_restart.sh  docker_status.sh  docker_up.sh
telegram_bot/: bot.py  config.py
telegram_bot/handlers/: __init__.py  error_handler.py  help_handler.py  meal_replacement_handler.py  new_plan_handler.py  new_plan_handler_old.py  secretary_mode.py  start_handler.py
telegram_bot/utils/: __init__.py  (+5 more)
tests/: test_recipe_validation.py
(+2 files in other folders)
